# Cpp-BallPhysicsSimulation

./: CMakeLists.txt  README.md
src/: Simulation.cpp  Simulation.hpp  World.cpp  World.hpp  main.cpp
src/Entities/: Entity.cpp  Entity.hpp  Sphere.cpp  Sphere.hpp  Transform.cpp  Transform.hpp
src/Forces/: AirFriction.cpp  AirFriction.hpp  Force.cpp  Force.hpp  Friction.cpp  Friction.hpp  Gravity.cpp  Gravity.hpp
src/Listeners/: Listener.cpp  Listener.h
src/Materials/: Material.cpp  Material.hpp
src/Utils/: Boundaries.cpp  Boundaries.h  Distance.cpp  Distance.hpp  Vector.cpp  Vector.hpp
tests/: CollisionTests.cpp  ForceTests.cpp
